[package]
name = "regex-patt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.14.0"
clocksource = "0.6.0"
rand = "0.8.5"
ratelimit = "0.5.1"
regex = "1.7.3"
rustrict = "0.7.4"
unicode-normalization = "0.1.22"
